discussion/kv_engine/184187/184187_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit 'couchbase/neo' into 'couchbase/master'

* commit 'a93fe2210':
  MB-54516: Refactor Manifest system event API
  MB-54516: Refactor, remove "duplicate" CollectionEntry structure
  MB-54463: CM doesn't deduplicate CDC items

Conflicts: engines/ep/src/collections/manifest.cc
  engines/ep/src/collections/manifest.h
  engines/ep/tests/module_tests/checkpoint_test.h
  engines/ep/tests/module_tests/collections/evp_store_collections_test.cc

Change-Id: I2a953effa253aac65fac4498d4e1e032893a57c9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-12-16 15:30:29.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-16 15:58:51.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22223/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3: error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1853:23: note: in instantiation of function template specialization "fmt::v8::detail::make_arg<true, fmt::v8::basic_format_context<fmt::v8::appender, char>, fmt::v8::detail::type::custom_type, const Collections::Metered &, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1872:10: note: in instantiation of function template specialization "fmt::v8::format_arg_store<fmt::v8::basic_format_context<fmt::v8::appender, char>, std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char>, bool, long, std::__cxx11::basic_string<char>, Collections::Metered, CanDeduplicate>::format_arg_store<std::__cxx11::basic_string<char> &, const std::__cxx11::basic_string<char> &, bool &, long &, std::__cxx11::basic_string<char> &, const Collections::Metered &, const CanDeduplicate &>" requested here
  return {std::forward<Args>(args)...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:3119:28: note: in instantiation of function template specialization "fmt::v8::make_format_args<fmt::v8::basic_format_context<fmt::v8::appender, char>, std::__cxx11::basic_string<char> &, const std::__cxx11::basic_string<char> &, bool &, long &, std::__cxx11::basic_string<char> &, const Collections::Metered &, const CanDeduplicate &>" requested here
  return vformat(fmt, fmt::make_format_args(args...));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/collections_types.cc:226:17: note: in instantiation of function template specialization "fmt::v8::format<std::__cxx11::basic_string<char>, const std::__cxx11::basic_string<char> &, bool, long, std::__cxx11::basic_string<char>, const Collections::Metered &, const CanDeduplicate &>" requested here
    return fmt::format(
                ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22223/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3:
error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22223/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43263/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/build/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3:
error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43263/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24685/ : FAILURE

Compile error at [2022-12-16T15:33:21.476Z] tlm/deps/fmt.exploded/include/fmt/core.h:1728:7:
error: static assertion failed: Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24685/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25546/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrNo_JsonNo_SnappyYes_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrNo_JsonNo_SnappyYes_AlwaysBufferYes
[2022-12-16T15:58:19.727Z] unknown file: Failure
[2022-12-16T15:58:19.727Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck: Unexpected buffer bytes:0 expected:61" thrown in the test body.
[2022-12-16T15:58:19.727Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrNo_JsonNo_SnappyYes_AlwaysBufferYes, where GetParam() = (Mcbp, XattrNo, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (31 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrNo_JsonNo_SnappyYes_AlwaysBufferYes
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25546/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21829/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51540/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/981/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11941/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23790/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12030/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24265/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32683/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
